# sonant

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sonant.cpp  sonant.h  sonant_impl.cpp  sonant_impl.h  sonant_utils.h  sonantmanager.cpp  sonantmanager.h  sonantmanager_p.h  sonantworker.cpp  sonantworker.h
examples/: common.h
examples/new-sonant-example/: main.cpp  printer.cpp  printer.h
examples/sonant-example/: CMakeLists.txt  main.cpp  sonant-example.pro
examples/test-whisper/: TestWhisper.pro  main.cpp  source.cpp
old/: sonantworker.h
